--- a/progetti-collaborativi/css/overlay.css
+++ b/progetti-collaborativi/css/overlay.css
@@ -90,8 +90,6 @@
     }
 }
 
-
-
 @media only screen and (max-width: 768px) {
     .overlay-icons {
         /* display: none; */
@@ -107,6 +105,22 @@
     
     .icon.minimizza, .overlay-content:has(.overlay-grid.--on) .icon.burger, .overlay-content:has(.overlay-grid:not(.--on)) .icon.indietro {
         display: none;
+    }
+
+    .overlay-grid.--a, .overlay-grid.--a.--on {
+        grid-template-columns: 0 100% 0 0 0 0;
+    }
+
+    .overlay-grid.--s, .overlay-grid.--s.--on {
+        grid-template-columns: 0 0 100% 0 0 0;
+    }
+
+    .overlay-grid.--d, .overlay-grid.--d.--on {
+        grid-template-columns: 0 0 0 100% 0 0;
+    }
+
+    .overlay-grid.--r, .overlay-grid.--r.--on {
+        grid-template-columns: 0 0 0 0 100% 0;
     }
      
 }
