--- a/progetti-collaborativi/css/style.css
+++ b/progetti-collaborativi/css/style.css
@@ -310,7 +310,7 @@ body:after{
 }
 
 
-.ul-nav [class*="scroll-a"], .dropdown:has(#d2) {
+.ul-nav [class*="scroll-a"] {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
