refactor(php): da Procedurale a logica OOP(05) Aggiunge e modifica file nella cartella services. - controllers:     - retrieve.php: modifiche coerenti con quelle del modello Utente         (modificato);     - crud.php: modifiche coerenti con quelle del modello Utente, e         aggiunta di ridirezione delle azioni verso UserManager,         TeamManger e ProjManager         (modificato); - core:     - AuthManager.php: modifiche coerenti con quelle del modello Utente         (modificato);     - Database.php: aggiunti controlli per la modifica e         l'eliminazione di tuple con la proprietà affected_rows         (modificato);     - DBLogger.php: aggiunta classe utile a creare log per vari tipi         di interazione col DB (aggiunto);     - Permessi.php: correzioni nella ricerca dei permessi (modificato);     - ProjManager.php: si occupa di operazioni crud svolte sui vari         progetti, istanziati attraverso la classe Progetto (aggiunto);     - TeamManager.php: si occupa di operazioni crud svolte sui vari         team, istanziati attraverso la classe Squadra (aggiunto);     - UserManager.php: si occupa di operazioni crud svolte sui vari         utenti, istanziati attraverso la classe Utente (aggiunto); - models:     - Sezione.php: rimossi metodi non più utilizzati (modificato);     - Categoria.php: correzioni varie (modificato);     - Dashboard.php: correzioni varie (modificato);     - Dashfocus.php: correzioni varie (modificato);     - Progetto.php: modella le tuple recuperate dalla tabella progetti         del DB, e fornisce metodi vincolati per aggiornamento,         inserimento e eliminazione, oltre che alla ricerca delle         stesse con conseguente creazione di istanza in caso di         successo di identificazione della tupla (aggiunto);     - Scheda.php: definisce la classe per le operazioni CRUD che         riguardano le schede delle categorie visibili all'utente.         (aggiunto);     - Squadra.php: modella le tuple recuperare dalla tabella team del

--- a/progetti-collaborativi/css/overlay.css
+++ b/progetti-collaborativi/css/overlay.css
@@ -654,10 +654,12 @@
     color: grey;
 }
 
-details.comment summary::-webkit-details-marker, details.comment summary::marker {
-    display: none;
-    content: "";
+details.comment summary::marker,
+:is(details.comment summary::-webkit-details-marker) {
+  display: none;
+  content: "";
 }
+
 
 .comment-container {
     display: block;
@@ -711,7 +713,7 @@ details.comment summary::-webkit-details-marker, details.comment summary::marker
 } */
 
 .comment {
-    display: flex;
+    /* display: flex; */
     width: 100%;
     max-width: 100%;
     height: min-content; 
